animation faster and choices clickable bugs: FIXED

--- a/placement_question/p_question_1.html
+++ b/placement_question/p_question_1.html
@@ -71,7 +71,8 @@
                 <div class="button-wrapper">
                     <a href="p_question_2.html" style="text-decoration: none;">
                         <button class="feedback-btn">Continue</button>
-                    </a>                </div>            
+                    </a>                
+                </div>            
             </div>
         </div>
     </div>
