--- a/placement_question/p_question_2.html
+++ b/placement_question/p_question_2.html
@@ -24,19 +24,19 @@
     </nav>
     <div class="placement-question-background" style="background-image: url('../assets/images/backgrounds/Placement Question Background.png'); ">
         <div class="question-background">
-            <p class="question-label">QUESTION 2 of 20</p>
+            <p class="question-label">QUESTION 2 of 10</p>
             <h3 class="question">What is the next number in the sequence 307, 315, 323, 331, …?</h3>
             <div class="choices-wrapper">
                 <div class="ac-choice">
                     <h2 class="a-choice">
                         A. 338
                     </h2>
-                    <h2 class="c-choice">
+                    <h2 class="c-choice correct-answer">
                         C. 339
                     </h2>
                 </div>
                 <div class="bd-choice">
-                    <h2 class="b-choice correct-answer">
+                    <h2 class="b-choice">
                         B. 340
                     </h2>
                     <h2 class="d-choice">
