--- a/summative assessment/s_assessment_2_A.html
+++ b/summative assessment/s_assessment_2_A.html
@@ -25,7 +25,7 @@
     <div class="placement-question-background" style="background-image: url('../assets/images/backgrounds/Placement Question Background.png'); ">
         <div class="question-wrapper">
             <div class="question-header">
-                <p class="question-label">Course Name > Summative Assessment > <b>Topic
+                <p class="question-label">Whole Numbers > Illustrating Numbers to 1,000 Using Blocks ><b> Summative Assessment
                 </b></p>
                 <div class="skills-bar">
                     <span class="skills-percentage" style="width: 70%;">
@@ -53,12 +53,16 @@
         </div>
         <div class="feedback-section">
             <div class="bottom-button">
-                <a href="s_assessment_1_B.html">
                     <button id="nextButton" class="question-btn">Next</button>
-                </a>
             </div>
         </div>
     </div>
+    <script>
+        const redirectButton = document.getElementById("nextButton");
+        redirectButton.onclick = function() {            
+            window.location.href = 's_assessment_2_B.html';
+        };
+    </script>
     <script src="../assets/js/placement_question/p_question_1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
